# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog][KaC]
and this project adheres to [Semantic Versioning][SemVer].

## [Unreleased]

### Added

### Fixed

- Updated this ChangeLog.

## [0.1.1] - 2018-01-19

### Added

- Function to write to CSV files.
- Constructor now parses file instead of requiring explicit function call.

### Fixed

- Removed unnecessary internal function arguments.
- Open/close file at beginning/end of every function as needed instead of once. 

## [0.1.0] - 2018-01-18

### Added

- Basic Library Structure.
- Single Unifying Class for FileIO.
- Function to load from CSV files.

### Fixed

- Removed Global Variables.
- Dropped namespace calls.

[0.1.1]: https://github.com/cdr255/FileIO/releases/tag/v0.1.1
[0.1.0]: https://github.com/cdr255/FileIO/releases/tag/v0.1.0
[SemVer]: http://semver.org/spec/v2.0.0.html
[KaC]: http://keepachangelog.com/en/1.0.0/