@@ -1,0 +1,14 @@
+# FileIO Roadmap
+
+This is a high level overview of some of the changes we want to make
+for the FileIO library. If you have an idea for a new feature, open an issue for
+discussion.
+
+## Bugs/Features
+
+| :smile: | Name                                   | Ref |
+| ------  | ----                                   | --- |
+| :soon:  | Passing Single Entries to/from library | [1] |
+
+
+[1]:  https://github.com/cdr255/FileIO/issues/1
