@@ -6,12 +6,14 @@
 
 class FileIO {
 public:
+  std::vector<std::string> getentry(int);
+  bool savefile ();
+  FileIO(std::string,std::string,int);
+  ~FileIO();
+private:
   std::fstream file;
   std::vector<std::string> values;
   std::string delimiter,filename;
   int rowsize;
   bool parsefile ();
-  bool savefile ();
-  FileIO(std::string,std::string,int);
-  ~FileIO();
 };
